<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz APP</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">start</string>
    <string name="image_flag">Image Flag</string>
    <string name="current_progress">0/10</string>
    <string name="check_button">Check</string>
    <string name="buttomn_check_finish">finish</string>
    <string name="button_check_check">check</string>
    <string name="button_next">Next</string>
    <string name="hey_congrats">Hey, Congrats!</string>
    <string name="text_view_result">Result</string>
    <string name="user_name">User name</string>
    <string name="score_9_out_of_10">Score 9 out of 10</string>
    <string name="button_finish">Finish!</string>
</resources>