<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuestionsActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="normal"
            tools:text="What country does this flag belong to?" />

        <ImageView
            android:id="@+id/image_flag"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/image_flag"
            tools:src="@drawable/spain"></ImageView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                tools:progress="7" />

            <TextView
                android:id="@+id/text_view_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/current_progress" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/text_view_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp"
            android:textStyle="normal"
            tools:text="Option One"
            android:background="@drawable/default_option_border_bg"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/text_view_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp"
            android:textStyle="normal"
            tools:text="Option Two"
            android:background="@drawable/default_option_border_bg"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/text_view_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp"
            android:textStyle="normal"
            tools:text="Option Three"
            android:background="@drawable/default_option_border_bg"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/text_view_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp"
            android:textStyle="normal"
            tools:text="Option Four"
            android:background="@drawable/default_option_border_bg"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"/>

        <Button
            android:id="@+id/button_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_button"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:minHeight="50dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>







